--- a/midnight-nord.theme.css
+++ b/midnight-nord.theme.css
@@ -39,7 +39,7 @@
 
 	/* text colors */
 	--text-0: #2e3440; /* text on colored elements */
-	--text-1: #eceff4; /* other normally white text */
+	--text-1: #000000; /* other normally white text */
 	--text-2: #e5e9f0; /* headings and important text */
 	--text-3: #eceff4; /* normal text */
 	--text-4: #93a4c2; /* icon buttons and channels */
